data/derived/fa15/progs/unify/prog1294.ml.out
Characters 134-135:
  | Sine e -> Printf.printf "sin(pi*%s)" e
                                         ^
Error: This expression has type expr but an expression was expected of type
         string
